--- a/school.html
+++ b/school.html
@@ -233,15 +233,16 @@ Computing</h2>
 			Because of their purely mathematical nature and high complexity, formal methods are often perceived in industrial contexts
 			as difficult to understand and detached from reality
 			In fact, many aspects of reality are intuitively understood and informally described using conceptual rather than formal models.
-			This is especially true in human-computer interaction, since the human components of the overall system cannot be fully
-			caracterised in marthematical terms.
+			This is especially true in human-computer interaction, since, on the one hand, the human components of the overall system cannot be fully
+			caracterised in marthematical terms, and, on the other hand, analyst may come from very different backgrounds, including social sciences,
+			and are unlikely to be expert in forma methods.
 			<br>
 			The first part of this short course introduces an intuitive notation to decribe human reasoning and behaviour and shows how to use it
 			informally to analyse human behaviour and human-computer interaction.
-			The second part considers conceptual models of momory processes and human behaviour from cognitive psychology in order to provide
+			The second part considers conceptual models of memory processes and human behaviour from cognitive psychology in order to provide
 			alternative formal semantics to the intuitive notation.
 			This allows us to reconcile our intuitive notation with some formal methods presented in previous courses of the school
-			in order to formally verify human-computer inteactions.
+			in order to allow analysts who are not expert in formal methods to formally verify human-computer inteactions.
 			Finally, the last part of the course, explores possible research developments in using formal methods to validate interactive
 			systems in the context of their real world usage.
 		</p>
