--- a/school.html
+++ b/school.html
@@ -31,7 +31,7 @@
 </tr>
 <img src="../yurt.jpg" title="Alexandr frolov, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" alt="Kazakh Yurt" width="700" height="453">
 
-<h1>ICTAC SCHOOL 2021</h1>
+<h1>ICTAC SCHOOL 2021 - FORMAL METHODS FOR AN INFORMAL WORLD</h1>
 <h2>Summer School of the 18th International Colloquium on Theoretical Aspects of
 Computing</h2>
 <h2>VIRTUAL EVENT organised by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
