--- a/keynotes.html
+++ b/keynotes.html
@@ -54,7 +54,12 @@ Computing</h2>
 	        [<a href="#ALAN">Abstract and Bio</a>]</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, 
 		Aalborg, Denmark</li>
-	<li><a href="https://fsl.cs.illinois.edu/people/grigore-rosu/">Grigore Rosu</a>, University of Illinois at Urbana-Champaign, USA</li>
+	<li><a href="https://fsl.cs.illinois.edu/people/grigore-rosu/">Grigore Rosu</a>,
+		University of Illinois at Urbana-Champaign,
+		USA
+		<br>
+		<strong>Formal Design, Implementation and Verification of Blockchain Languages</strong>
+	        [<a href="#GRIGORE">Abstract and Bio</a>]</li>
 	</ul>
 <br>
 
