--- a/school.html
+++ b/school.html
@@ -98,7 +98,7 @@ Computing</h2>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
-		(<i>3 hours</i> - Thu 2, Fri 3, Mon 6 Sep 16:00-17:00 GMT+6)</h3>
+		(<i>2 hours</i> - Thu 2 and Fri 3 Sep 16:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Juliana Küster Filipe Bowles</h3></li>
 		</ul>
@@ -403,16 +403,6 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                       </p>
                     </td>
                    </tr>
-                   <tr>
-                    <td>
-                      <p class="text"><strong>16:00-17:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
-			<strong>Juliana Küster Filipe Bowles</strong>
-			(University of St. Andrews, UK)
-                      </p>
-                    </td>
-                   </tr>
-                   <tr>
 <br>
 <br>
 
@@ -592,16 +582,6 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                       </p>
                     </td>
                    </tr>
-                   <tr>
-                    <td>
-                      <p class="text"><strong>11:00-12:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
-			<strong>Juliana Küster Filipe Bowles</strong>
-			(University of St. Andrews, UK)
-                      </p>
-                    </td>
-                   </tr>
-                   <tr>
 <br>
 <br>
 
@@ -721,7 +701,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-12:00 -
-			<a style="color:#B40431;">A Tutorial to Maude (Part 2)/a></strong><br>
+			<a style="color:#B40431;">A Tutorial to Maude (Part 2)</a></strong><br>
 			<strong>Peter Csaba &Ouml;lveczky</strong>
 			(University of Oslo, Norway)
                       </p>
@@ -780,16 +760,6 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                       </p>
                     </td>
                    </tr>
-                   <tr>
-                    <td>
-                      <p class="text"><strong>12:00-13:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
-			<strong>Juliana Küster Filipe Bowles</strong>
-			(University of St. Andrews, UK)
-                      </p>
-                    </td>
-                   </tr>
-                   <tr>
 <br>
 <br>
 
@@ -970,16 +940,6 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                       </p>
                     </td>
                    </tr>
-                   <tr>
-                    <td>
-                      <p class="text"><strong>20:00-21:00 -
-			<a style="color:#B40431;">Applying Formal Methods in Healthcare (Part 3)</a></strong><br>
-			<strong>Juliana Küster Filipe Bowles</strong>
-			(University of St. Andrews, UK)
-                      </p>
-                    </td>
-                   </tr>
-                   <tr>
 <br>
 <br>
 
