--- a/school.html
+++ b/school.html
@@ -234,8 +234,8 @@ Computing</h2>
 			as difficult to understand and detached from reality
 			In fact, many aspects of reality are intuitively understood and informally described using conceptual rather than formal models.
 			This is especially true in human-computer interaction, since, on the one hand, the human components of the overall system cannot be fully
-			caracterised in marthematical terms, and, on the other hand, analyst may come from very different backgrounds, including social sciences,
-			and are unlikely to be expert in forma methods.
+			characterised in mathematical terms, and, on the other hand, analyst may come from very different backgrounds, including social sciences,
+			and are unlikely to be expert in formal methods.
 			<br>
 			The first part of this short course introduces an intuitive notation to decribe human reasoning and behaviour and shows how to use it
 			informally to analyse human behaviour and human-computer interaction.
