--- a/school.html
+++ b/school.html
@@ -237,12 +237,12 @@ Computing</h2>
 			characterised in mathematical terms, and, on the other hand, analyst may come from very different backgrounds, including social sciences,
 			and are unlikely to be expert in formal methods.
 			<br>
-			The first part of this short course introduces an intuitive notation to decribe human reasoning and behaviour and shows how to use it
+			The first part of this short course introduces an intuitive notation to describe human reasoning and behaviour and shows how to use it
 			informally to analyse human behaviour and human-computer interaction.
 			The second part considers conceptual models of memory processes and human behaviour from cognitive psychology in order to provide
 			alternative formal semantics to the intuitive notation.
 			This allows us to reconcile our intuitive notation with some formal methods presented in previous courses of the school
-			in order to allow analysts who are not expert in formal methods to formally verify human-computer inteactions.
+			in order to allow analysts who are not expert in formal methods to formally verify human-computer interactions.
 			Finally, the last part of the course, explores possible research developments in using formal methods to validate interactive
 			systems in the context of their real world usage.
 		</p>
