--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@ Computing</h2>
 <h2 style="color:#B40431;">Important Dates</h2>
 <hr size="1">
 <ul>
+	<li>The conference proceedings are now available for ICTAC 2021 participant to download:
+		<br>
+		<a href="https://link.springer.com/book/10.1007%2F978-3-030-85315-0">https://link.springer.com/book/10.1007%2F978-3-030-85315-0</a></li>
 	<li><strong>Paper submission deadline: <s>May 7, 2021</s>  May 14, 2021 AoE (EXTENDED)</strong></li>
-<li><strong>Notification: June 18,  2021</strong></li>
+        <li><strong>Notification: June 18,  2021</strong></li>
 </ul>
 </div>
 </div>
