--- a/keynotes.html
+++ b/keynotes.html
@@ -53,7 +53,11 @@ Computing</h2>
 		<strong>Qualitative–Quantitative Reasoning: thinking informally about formal things</strong>
 	        [<a href="#ALAN">Abstract and Bio</a>]</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, 
-		Aalborg, Denmark</li>
+		Aalborg, Denmark
+		<br>
+		<strong>Model Checking and Machine Learning Joining Forces</strong>
+	        [<a href="#KIM">Abstract and Bio</a>]</li>
+	</li>
 	<li><a href="https://fsl.cs.illinois.edu/people/grigore-rosu/">Grigore Rosu</a>,
 		University of Illinois at Urbana-Champaign,
 		USA
@@ -72,7 +76,7 @@ Aachen, Germany
 <br>
 <img src="Images/WilvanderAalst.png" title="Wil van der Aalst" alt="Wil van der Aalst" width="80" height="80">
 <hr size="1">
-<h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h2>
+<h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</h2>
 <h3 style="color:#B40431;">Abstract</h3>
 <p>Process mining dramatically changed the way we look at process models and operational processes.
 	Even seemingly simple processes like Purchase-to-Pay (P2P) and Order-to-Cash (O2C) are often amazingly complex,
@@ -118,7 +122,7 @@ Aachen, Germany
 Computational Foundry, Swansea University,
 Swansea, UK
 <hr size="1">
-<h2>Qualitative–Quantitative Reasoning: thinking informally about formal things<h2>
+<h2>Qualitative–Quantitative Reasoning: thinking informally about formal things</h2>
 <h3 style="color:#B40431;">Abstract</h3>
 <p>When I first read Hardy and Wright’s Number Theory I was captivated.  However, as much as the mathematics itself, one statement always stood out for me. 
 	In the very first chapter they list a number of “questions concerning primes”, the first of which is whether there is a formula for the nth prime. 
@@ -182,9 +186,24 @@ Swansea, UK
 Aalborg University, 
 Aalborg, Denmark
 <hr size="1">
-<h2>TBA<h2>
+<h2>Model Checking and Machine Learning Joining Forces</h2>
 <h3 style="color:#B40431;">Abstract</h3>
-<p>TBA</p>
+<p>In the talk I will offer a detailed presentation on how we make the symbolic model checking techniques
+and machine learning join forces in the tool UPPAAL.
+<br>
+The first step towards exploiting the efficiency of machine learning in UPPAAL was made in the branch Uppaal SMC.
+Here highly efficient statistical model checking capabilities are provided allowing for performance analysis
+of a rich class of stochastic hybrid automata.
+Most recently the SMC engine of UPPAAL has been considerably accelerated by exploiting independencies of
+system components during generation of random runs. This has allowed us to make Agent-based models of
+the COVID19 pandemic with millions of components in order to analyze the effect of different lock-down mechanism
+considered in Denmark.
+<br>
+In the most recent branch UPPAAL Stratego symbolic techniques are combined with reinforcement learning to effientciently
+obtain near-optimal yet safe strategies for hybrid Markov decision processes.
+The talk will describe learning algorithms developed, their convergence, compact representation as well as demonstration
+of the tool on a Dagstuhl “Smart Farming Challenge”.
+Other applications of UPPAAL Stratego include  water-management, traffic-light control, and  energy-aware building.</p>
 <h3 style="color:#B40431;">Bio</h3>
 <p>TBA</p>
 <br>
@@ -194,7 +213,7 @@ Aalborg, Denmark
 <h2 id="news" style="color:#B40431;">Grigore Rosu</h2>
 University of Illinois at Urbana-Champaign, USA
 <hr size="1">
-<h2>Formal Design, Implementation and Verification of Blockchain Languages<h2>
+<h2>Formal Design, Implementation and Verification of Blockchain Languages</h2>
 <h3 style="color:#B40431;">Abstract</h3>
 <p>The usual post-mortem approach to formal language semantics and verification,
 where the language is firstly implemented and used in production for many years
