--- a/keynotes.html
+++ b/keynotes.html
@@ -205,7 +205,21 @@ The talk will describe learning algorithms developed, their convergence, compact
 of the tool on a Dagstuhl “Smart Farming Challenge”.
 Other applications of UPPAAL Stratego include  water-management, traffic-light control, and  energy-aware building.</p>
 <h3 style="color:#B40431;">Bio</h3>
-<p>TBA</p>
+<p>Kim Guldstrand Larsen is a Professor of Computer Science at Aalborg University (AAU), since 1993.
+He received Honorary Doctorate from Uppsala University (1999), ENS Cachan (2007), International Chair at INRIA (2016)
+and Distinguished Professor at North-Eastern University, Shenyang, China (2018).
+His research interests cover modeling, verification, performance analysis of real-time and embedded systems with applications
+to concurrency theory, model checking and machine learning.
+<br>
+He is the prime investigator of the verification tool UPPAAL for which he received the CAV Award in 2013.
+Other prized received include Danish Citation Laureates Award, Thomson Scientific Award as the most cited Danish Computer
+Scientist in the period 1990-2004 (2005), Grundfos Prize (2016), Ridder af Dannebrog (2007).
+He is member of the Royal Danish Academy of Sciences and Letters, The Danish Academy of Technical Science, where he is Digital wiseman.
+Also, he is member of the Academia Europaea. In 2015 he received the prestigious ERC Advanced Grant (LASSO), and
+in 2021 he won Villum Investigator Grant (S4OS).  He has been PI and director of several large centers and initiatives including CISS
+(Center for Embedded Software systems, 2002-2008), MT-LAB (Villum-Kahn Rasmussen Center of Excellence,n2009-2013), IDEA4CPS
+(Danish-Chinese Research Center, 2011-2017), INFINIT National ICT Innovation Network, 2009-2020), DiCyPS
+(Innovation Fund Center, 2015-2021). Finally, he is co-founder of the companies UP4ALL (2000), ATS (2017) and VeriAal (2020).</p>
 <br>
 <br>
 <hr size="1">
