--- a/school.html
+++ b/school.html
@@ -81,7 +81,7 @@ Computing</h2>
 		<ul>
 			<li><h3>Alan Dix</h3></li>
 		</ul>
-		<p><em><strong>Computational Foundry / Ffowndri Gyfrifiadol Swansea University, Wales, UK</em></strong></p>
+		<p><em><strong>Computational Foundry / Ffowndri Gyfrifiadol, Swansea University, Wales, UK</em></strong></p>
 		<p><strong>Abstract:</strong>
 			<br>
 			The first part of this lecture will give a lightening introdction to the use of formal methods in human–computer interaction. 
