--- a/school.html
+++ b/school.html
@@ -95,7 +95,7 @@ Computing</h2>
 			hand-held controllers. 
 			We will also look at the ways formal analysis contributed to the design of an internet-enabled ‘cafe open’ sign – IoT in action!
 		</p>
-		<p><a href="https://drive.google.com/drive/folders/1KA3kv87nk7wMe1wUK-7SvWbYspzA0Y3A?usp=sharing">Teaching Material</a></p>
+		<p><a href="https://drive.google.com/drive/folders/1KA3kv87nk7wMe1wUK-7SvWbYspzA0Y3A?usp=sharing">Course Material</a></p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
