--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@ Computing</h2>
 <h2 id="news" style="color:#B40431;">News</h2>
 <hr size="1">
 <ul>
-<li>The conference proceedings are now available for ICTAC 2021 participant to download:
+<li>The conference proceedings are now available for download:
     <br>
-    <a href="https://link.springer.com/book/10.1007%2F978-3-030-85315-0">https://link.springer.com/book/10.1007%2F978-3-030-85315-0</a></li>
+    <a href="https://link.springer.com/book/10.1007%2F978-3-030-85315-0">https://link.springer.com/book/10.1007%2F978-3-030-85315-0</a>
+    <br>
+    Free download for ICTAC 2021 participants from 1 to 28 September 2021</li>
 <li><strong>The conference will be entirely in virtual mode and there will be no conference fee</strong>.</li>
 <li>Submission deadline <b>extended</b> to <i>May 14, 2021 (AoE)</i></li>	
 <li>Springer will sponsor the Best Paper Award</li>
