--- a/school.html
+++ b/school.html
@@ -49,7 +49,8 @@ Computing</h2>
 <hr>
 </center>
 <ol>
-	<li><h3><a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a>
+	<li><a name="COURSE-ANA"></a>
+	    <h3><a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a>
 		(<i>4 hours</i> - Wed 1 Sep 13:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Ana Cavalcanti</h3></li>
@@ -76,7 +77,8 @@ Computing</h2>
 		</p>
 		<hr>
 	</li>
-	<li><h3><a style="color:#B40431;">Modelling interactions: digital and physical</a>
+	<li><a name="COURSE-ALAN"></a>
+	    <h3><a style="color:#B40431;">Modelling interactions: digital and physical</a>
 		(<i>2 hours</i> - Wed 1 Sep 18:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Alan Dix</h3></li>
