--- a/school.html
+++ b/school.html
@@ -100,7 +100,8 @@ Computing</h2>
 		<p><a href="https://drive.google.com/drive/folders/1KA3kv87nk7wMe1wUK-7SvWbYspzA0Y3A?usp=sharing">Course Materials</a></p>
 		<hr>
 	</li>
-	<li><h3><a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
+	<li><h3><a name="COURSE-JULIANA"></a>
+	    <a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
 		(<i>2 hours</i> - Thu 2 and Fri 3 Sep 16:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Juliana Küster Filipe Bowles</h3></li>
@@ -125,7 +126,8 @@ Computing</h2>
 		</p>
 		<hr>
 	</li>
-	<li><h3><a style="color:#B40431;">A Tutorial to Maude</a>
+	<li><a name="COURSE-PETER"></a>
+	    <h3><a style="color:#B40431;">A Tutorial to Maude</a>
 		(<i>5 hours</i> - Thu 2 Sep 15:00-16:00, Fri 3 Sep 14:00-16:00, Tue 7 Sep 15:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Peter Csaba &Ouml;lveczky</h3></li>
@@ -157,9 +159,11 @@ Computing</h2>
 			It also briefly touches upon some applications of Maude, and
 			extensions to real-time and probabilistic systems.
 		</p>
+		<p><a href="">Course Materials</a></p>
 		<hr>
 	</li>
-	<li><h3><a style="color:#B40431;">Process Mining</a>
+	<li><a name="COURSE-WIL"></a>
+	    <h3><a style="color:#B40431;">Process Mining</a>
 		(<i>3 hours</i> - Thu 2 Sep 19:00-20:00, Fri 3 Sep 18:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Wil van der Aalst</h3></li>
@@ -199,7 +203,8 @@ Computing</h2>
 	<li><h3><a style="color:#B40431;">Research and Industry</a>
 		(<i>2 hours</i> - Mon 6 Sep 14:00-16:00 GMT+6)</h3>
 		<ul>
-			<li><h3><a style="color:#B40431;">Security Research at Oracle Labs, Australia: Program Analysis Meets Security</a>
+			<li><a name="COURSE-PADDY"></a>
+	                    <h3><a style="color:#B40431;">Security Research at Oracle Labs, Australia: Program Analysis Meets Security</a>
 		            (<i>1 hour</i> - Mon 6 Sep 14:00-15:00 GMT+6)</h3>
 			    <h3>Padmanabhan Krishnan</h3></li>
 		<p><em><strong>Oracle Labs, Australia</em></strong></p>
@@ -210,7 +215,8 @@ Computing</h2>
 			I will also outline the challenges that we overcame to ensure our research was  deployed in practice.
 			I will conclude with some of the remaining challenges especially in the context of DevSecOps.
 		</p>
-			<li><h3><a style="color:#B40431;">Formal Methods Adoption in Industry: An Experience Report</a>
+			<li><a name="COURSE-PADDY"></a>
+	                     <h3><a style="color:#B40431;">Formal Methods Adoption in Industry: An Experience Report</a>
 		            (<i>1 hour</i> - Mon 6 Sep 15:00-16:00 GMT+6)</h3>
 			    <h3>Ben Tyler</h3></li>
 		<p><em><strong>Department of Computer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
@@ -227,7 +233,8 @@ Computing</h2>
 		</ul>
 		<hr>
 	</li>
-	<li><h3><a style="color:#B40431;">Analyzing interactions: informally and formally</a>
+	<li><a name="COURSE-ANTONIO"></a>
+	    <h3><a style="color:#B40431;">Analyzing interactions: informally and formally</a>
 		(<i>2 hours</i> - Tue 7 Sep 18:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Antonio Cerone</h3></li>
