--- a/school.html
+++ b/school.html
@@ -159,7 +159,7 @@ Computing</h2>
 			It also briefly touches upon some applications of Maude, and
 			extensions to real-time and probabilistic systems.
 		</p>
-		<p><a href="">Course Materials</a></p>
+		<p><a href="https://drive.google.com/drive/folders/1CQTetaZxW7B2uGQPGGxgQJ0ya4ZaZCmB?usp=sharing">Course Materials</a></p>
 		<hr>
 	</li>
 	<li><a name="COURSE-WIL"></a>
