--- a/school.html
+++ b/school.html
@@ -198,6 +198,7 @@ Computing</h2>
 			provided.
 			<br>
 		</p>
+		<p><a href="https://drive.google.com/drive/folders/1z-aubtebRshPM8_2NQRpOhh35lSwGPYn?usp=sharing">Course Materials</a></p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Research and Industry</a>
