--- a/school.html
+++ b/school.html
@@ -124,6 +124,7 @@ Computing</h2>
 			In addition, this course will discuss how challenges arising in medicine can provide inspiration for further research on the
 			foundations of formal verification.
 		</p>
+		<p><a href="https://drive.google.com/drive/folders/1TgiyMBzf9THsJ2OANnVKRPrfbb9L1rCX?usp=sharing">Course Materials</a></p>
 		<hr>
 	</li>
 	<li><a name="COURSE-PETER"></a>
