--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -39,10 +39,33 @@ Computing</h2>
 <h3 style="color:#B40431;">GMT+6: Nur-Sultan, Almaty</h3>
 <hr>
 </center>
+<h2 style="color:#B40431;">SESSION SCHEDULE - GMT+6: Nur-Sultan, Almaty</h3>
+
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
+	
+	
+	
 <h3 style="color:#000000;">Schedule for Other Time Zone:
  <a style="color:#B40431;" href="/.">GMT+1 (London)</a> |
  <a style="color:#B40431;" href="/.">GMT+2 (CEST)</a>
 </h3>
+
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
