--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -41,7 +41,7 @@ Computing</h2>
 </center>
 <h2 style="color:#B40431;">SESSION SCHEDULE - GMT+6: Nur-Sultan, Almaty</h3>
 
-<table>
+<table align = "left">
   <tr>
     <th>Company</th>
     <th>Contact</th>
