--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -41,13 +41,13 @@ Computing</h2>
 </center>
 <h2 style="color:#B40431;">SESSION SCHEDULE - GMT+6: Nur-Sultan, Almaty</h3>
 
-<table align = "left">
-  <tr>
+<table border = "1">
+  <tr align = "left">
     <th>Company</th>
     <th>Contact</th>
     <th>Country</th>
   </tr>
-  <tr>
+  <tr align = "left">
     <td>Alfreds Futterkiste</td>
     <td>Maria Anders</td>
     <td>Germany</td>
