--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -43,12 +43,14 @@ Computing</h2>
 
 <table border = "1">
   <tr align = "left">
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <th>Session / Break</th>
+    <th>GMT-6</th>
+    <th>GMT-5</th>
+    <th>GMT-3</th>
+    <th>GMT-5</th>
   </tr>
   <tr align = "left">
-    <td>Alfreds Futterkiste</td>
+    <td>Opening</td>
     <td>Maria Anders</td>
     <td>Germany</td>
   </tr>
