--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -47,17 +47,42 @@ Computing</h2>
     <th>GMT-6</th>
     <th>GMT-5</th>
     <th>GMT-3</th>
-    <th>GMT-5</th>
+    <th>GMT+1</th>
+    <th>GMT+2</th>
+    <th>GMT+3</th>
+    <th>GMT+5:30</th>
+    <th>GMT+6</th>
+    <th>GMT+7</th>
+    <th>GMT+9</th>
+    <th>GMT+10</th>
   </tr>
   <tr align = "left">
     <td>Opening</td>
     <td>Maria Anders</td>
     <td>Germany</td>
+    <td>Opening</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+    <td>Opening</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+    <td>Opening</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>Opening</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+    <td>Opening</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+    <td>Opening</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+    <td>Opening</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
   </tr>
 </table>
 	
