--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -44,39 +44,25 @@ Computing</h2>
 <table border = "1">
   <tr align = "left">
     <th>Session / Break</th>
-    <th>GMT-6</th>
-    <th>GMT-5</th>
-    <th>GMT-3</th>
-    <th>GMT+1</th>
-    <th>GMT+2</th>
-    <th>GMT+3</th>
+    <th>GMT-6:00</th>
+    <th>GMT-5:00</th>
+    <th>GMT-3:00</th>
+    <th>GMT+1:00</th>
+    <th>GMT+2:00</th>
+    <th>GMT+3:00</th>
     <th>GMT+5:30</th>
-    <th>GMT+6</th>
-    <th>GMT+7</th>
-    <th>GMT+9</th>
-    <th>GMT+10</th>
+    <th>GMT+6:00</th>
+    <th>GMT+7:00</th>
+    <th>GMT+9:00</th>
+    <th>GMT+10:00</th>
   </tr>
   <tr align = "left">
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td><strong>OPENING</stong></td>
+    <td>1:15</td>
+    <td>2:15</td>
+    <td>4:15</td>
+    <td>8:15</td>
+    <td>9:15</td>
     <td>Opening</td>
     <td>Maria Anders</td>
     <td>Germany</td>
