--- a/school.html
+++ b/school.html
@@ -38,7 +38,7 @@ Computing</h2>
 <tr height="10pt">
   <td align="center">
     <hr> <h2><a style="color:#B40431;" href="#COURSES">Courses</a> | <a
-		style="color:#B40431;" href="#SCHEDULE+6">Schedule</a></a></h2>
+		style="color:#B40431;" href="#SCHEDULE+6">Schedule</a></h2>
      <hr>
    </td>
 </tr>
