--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -36,44 +36,87 @@
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
 <h1 style="color:#B40431;">PROGRAMME</h1>
-<h3 style="color:#B40431;">GMT+6: Nur-Sultan, Almaty</h3>
-<hr>
+<tr height="10pt">
+  <td align="center">
+    <hr> <h2><a style="color:#B40431;" href="#SCHEDULE">Session Schedule by Time Zone</a> | <a
+		style="color:#B40431;" href="#DETAILED">Detailed Programme</a> |
+		style="color:#B40431;" href="#PAPERS">List of accepte papers</a>
+	 </h2>
+     <hr>
+   </td>
+</tr>
 </center>
-<h2 style="color:#B40431;">SESSION SCHEDULE - GMT+6: Nur-Sultan, Almaty</h3>
+<a name = "SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h3>
 
 <table border = "1">
   <tr align = "left">
     <th>Session / Break</th>
     <th>GMT-6:00</th>
     <th>GMT-5:00</th>
+    <th>GMT-4:00</th>
     <th>GMT-3:00</th>
+    <th>GMT</th>
     <th>GMT+1:00</th>
     <th>GMT+2:00</th>
     <th>GMT+3:00</th>
+    <th>GMT+4:00</th>
+    <th>GMT+4:30</th>
+    <th>GMT+5:00</th>
     <th>GMT+5:30</th>
     <th>GMT+6:00</th>
     <th>GMT+7:00</th>
+    <th>GMT+8:00</th>
     <th>GMT+9:00</th>
+    <th>GMT+9:30</th>
     <th>GMT+10:00</th>
+    <th>GMT+12:00</th>
   </tr>
   <tr align = "left">
     <td><strong>OPENING</stong></td>
     <td>1:15</td>
     <td>2:15</td>
+    <td>3:15</td>
     <td>4:15</td>
+    <td>7:15</td>
     <td>8:15</td>
     <td>9:15</td>
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-    <td>Opening</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>10:15</td>
+    <td>11:15</td>
+    <td>11:45</td>	  
+    <td>12:15</td>
+    <td>12:45</td>
+    <td>13:15</td>
+    <td>14:15</td>
+    <td>15:15</td>  
+    <td>16:15</td>
+    <td>16:45</td>
+    <td>17:15</td>
+    <td>19:15</td>
   </tr>
 </table>
-	
-	
-	
+<h3 style="color:#B40431;">Time zones:</h3>
+<ul>
+  <li><a style="color:#B40431;">GMT-6:00:</a> Central America, US/Canada Mountain Time<\/li>
+  <li><a style="color:#B40431;">GMT-5:00:</a> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time</li>
+  <li><a style="color:#B40431;">GMT-4:00</a> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time</li>
+  <li><a style="color:#B40431;">GMT-3:00</a> Brasilia, Buenos Aires, Montevideo</li>
+  <li><a style="color:#B40431;">GMT:</a> Azores, Monrovia, Reykjavik</li>
+  <li><a style="color:#B40431;">GMT+1:00</a> Dublin, Lisbon, London, West Central Africa</li>
+  <li><a style="color:#B40431;">GMT+2:00</a> Pretoria, CEST (Berlin, Budapest, Madrid, Oslo, Paris, Rome, Stockholm, Vienna)</li>
+  <li><a style="color:#B40431;">GMT+3:00</a> Beirut, Jerusalem, Minsk, Moscow, Nairobi, St. Petersburg</li>
+  <li><a style="color:#B40431;">GMT+4:00</a> Abu Dhabi, Muscat, Yerevan</li>
+  <li><a style="color:#B40431;">GMT+4:30</a> Kabul, Tehran</li>
+  <li><a style="color:#B40431;">GMT+5:00</a> Ekaterinburg, Tashkent, West Kazakhstan (Aqtobe, Atyrau, Oral)</li>
+  <li><a style="color:#B40431;">GMT+5:30</a> Kolkata, Mumbai, New Delhi</li>
+  <li><a style="color:#B40431;">GMT+6:00</a> Dhaka, East Kazakhstan (Almaty, Karagandy, Nur-Sultan, Taraz)</li>
+  <li><a style="color:#B40431;">GMT+7:00</a> Bangkok, Hanoi, Jakarta, Novosibirsk</li>
+  <li><a style="color:#B40431;">GMT+8:00</a> Beijing, Hong Kong, Macau, Irkutsk, Perth, Ulan Batur</li>
+  <li><a style="color:#B40431;">GMT+9:00</a> Seoul, Tokyo, Yakutsk</li>
+  <li><a style="color:#B40431;">GMT+9:30</a> Adelaide, Darwin</li>
+  <li><a style="color:#B40431;">GMT+10:00</a> Brisbane, Hobart, Melbourne, Sydney, Vladivostok</li>
+  <li><a style="color:#B40431;">GMT+12:00</a> Auckland, Fiji, Wellington</li>
+</ul>	
+		
 <h3 style="color:#000000;">Schedule for Other Time Zone:
  <a style="color:#B40431;" href="/.">GMT+1 (London)</a> |
  <a style="color:#B40431;" href="/.">GMT+2 (CEST)</a>
@@ -467,6 +510,94 @@ Computing</h2>
 <br>
 <br>
 
+<a name = "PAPERS"></a><h2 style="color:#B40431;">LIST OF ACCEPTED PAPERS</h3>
+The scientific programme consists of
+<strong><a style="color:#B40431;" href="keynotes.html">four keynote talks</a></strong>
+and the following <strong><a style="color:#B40431;">accepted papers</a></strong>:
+</p>
+<ul>
+	<li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a><br>
+    Yoshifumi Manabe and Hibiki Ono
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Learning Probabilistic Automata using Residuals</a><br>
+    Wenjing Chu, Shuo Chen and Marcello Bonsangue
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">ComplexityParser: an automatic tool for certifying poly-time complexity of Java programs</a><br>
+    Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
+    Jürgen König and Heike Wehrheim
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a><br>
+    Liyi Li and Elsa Gunter
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
+    Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
+    Yati Phyo, Canh Do Minh and Kazuhiro Ogata
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
+    Rick Erkens and Jan Friso Groote
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
+    Sanjiva Prasad and Rathnakar Madhukar Yerraguntla
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a><br>
+    Luís Cruz-Filipe, Fabrizio Montesi and Marco Peressotti
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
+    Alejandro Díaz-Caro and Gilles Dowek
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
+    Muhammad Hannan Khan, Osman Hasan and Shahid Khan
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a><br>
+    Isabela Dramnesc and Tudor Jebelean
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a><br>
+    Stéphane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Calculus for Attribute-based Memory Updates</a><br>
+    Michele Pasqua and Marino Miculan
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
+    Luis Bustamante and Ana Teresa Martins
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
+    Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Reactive Synthesis from Visibly Register Pushdown Automata</a><br>
+    Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki
+    </strong>
+	</li>
+	<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a><br>
+    Ross Horne, Sjouke Mauw and Semen Yurkov
+    </strong>
+	</li>
+	</li>
+	<li><strong><a style="color:#B40431;">An Incentive Mechanism for Trading Personal Data in Data Market</a><br>
+    Sayan Biswas, Kangsoo Jung and Catuscia Palamidessi
+    </strong>
+	</li>
+</ul>
 	   
 
 	   
