--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -50,26 +50,48 @@ Computing</h2>
 
 <table border = "1">
   <tr align = "left">
-    <th>Session / Break</th>
-    <th>GMT-6:00</th>
-    <th>GMT-5:00</th>
-    <th>GMT-4:00</th>
-    <th>GMT-3:00</th>
-    <th>GMT</th>
-    <th>GMT+1:00</th>
-    <th>GMT+2:00</th>
-    <th>GMT+3:00</th>
-    <th>GMT+4:00</th>
-    <th>GMT+4:30</th>
-    <th>GMT+5:00</th>
-    <th>GMT+5:30</th>
-    <th>GMT+6:00</th>
-    <th>GMT+7:00</th>
-    <th>GMT+8:00</th>
-    <th>GMT+9:00</th>
-    <th>GMT+9:30</th>
-    <th>GMT+10:00</th>
-    <th>GMT+12:00</th>
+    <th style='border-bottom:none'>Session</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'>GMT</th>
+  </tr>
+  <tr align = "left">
+    <th>or Break</th>
+    <th style='border-top:none'>-6:00</th>
+    <th style='border-top:none'>-5:00</th>
+    <th style='border-top:none'>-4:00</th>
+    <th style='border-top:none'>-3:00</th>
+    <th style='border-top:none'></th>
+    <th style='border-top:none'>+1:00</th>
+    <th style='border-top:none'>+2:00</th>
+    <th style='border-top:none'>+3:00</th>
+    <th style='border-top:none'>+4:00</th>
+    <th style='border-top:none'>+4:30</th>
+    <th style='border-top:none'>+5:00</th>
+    <th style='border-top:none'>+5:30</th>
+    <th style='border-top:none'>+6:00</th>
+    <th style='border-top:none'>+7:00</th>
+    <th style='border-top:none'>+8:00</th>
+    <th style='border-top:none'>+9:00</th>
+    <th style='border-top:none'>+9:30</th>
+    <th style='border-top:none'>+10:00</th>
+    <th style='border-top:none'>+12:00</th>
   </tr>
   <tr align = "left">
     <td><strong>OPENING</stong></td>
