--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -39,7 +39,7 @@ Computing</h2>
 <tr height="10pt">
   <td align="center">
     <hr> <h2><a style="color:#B40431;" href="#SCHEDULE">Session Schedule by Time Zone</a> | <a
-		style="color:#B40431;" href="#DETAILED">Detailed Programme</a> |
+		style="color:#B40431;" href="#DETAILED">Detailed Programme</a> | <a
 		style="color:#B40431;" href="#PAPERS">List of accepte papers</a>
 	 </h2>
      <hr>
@@ -51,28 +51,28 @@ Computing</h2>
 <table border = "1">
   <tr align = "left">
     <th style='border-bottom:none'>Session</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
-    <th style='border-bottom:none'>GMT</th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
   </tr>
   <tr align = "left">
-    <th>or Break</th>
+    <th style='border-top:none'>or Break</th>
     <th style='border-top:none'>-6:00</th>
     <th style='border-top:none'>-5:00</th>
     <th style='border-top:none'>-4:00</th>
@@ -94,7 +94,7 @@ Computing</h2>
     <th style='border-top:none'>+12:00</th>
   </tr>
   <tr align = "left">
-    <td><strong>OPENING</stong></td>
+    <td><strong><a href = "#OPENING">OPENING</a></stong></td>
     <td>1:15</td>
     <td>2:15</td>
     <td>3:15</td>
@@ -149,6 +149,7 @@ Computing</h2>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
                   <tr>
                     <td>
+		       <a name = "OPENIING"></a>
                        <p class="text"><strong>13:15-13:30 - OPENING</strong></p>
                     </td>
                   </tr>
